[package]
name = "python-parser"
version = "0.1.0"
authors = ["Valentin Lorentz <progval+git@progval.net>"]
license = "GPL-3.0-or-later"

[features]
default = ["bigint", "wtf8"]
bigint = ["num-traits", "num-bigint"]

[[bin]]
name = "prettyprint"
path = "src/main.rs"

[dependencies]
nom = "^4.0"
#nom_locate = { path = "../nom_locate/" }
nom_locate = { git = "https://github.com/fflorent/nom_locate" }
unicode-xid = "^0.1"
#unicode_names = "^0.1.7"
num-traits = { version="^0.2.4", optional=true }
num-bigint = { version="^0.2.0", optional=true }
wtf8 = { version="^0.0.3", optional=true }

[dev-dependencies]
pretty_assertions = "^0.4"
